<resources>
  <!-- Main activity -->
  <string name="app_name">Stroke Input Method</string>
  <string name="label__main_activity__welcome">Welcome to Stroke Input Method!</string>
  <string name="label__main_activity__source_code_button">Source Code</string>
  <string name="label__main_activity__help_button">Help</string>
  <string name="label__main_activity__about_button">About</string>
  <string name="label__main_activity__privacy_button">Privacy Policy</string>
  <string name="text__main_activity__input_method_settings">
    1. If you have newly installed Stroke Input Method,
    you must manually enable it in the system settings before it can be used:
  </string>
  <string name="label__main_activity__input_method_settings_button">Input method settings</string>
  <string name="text__main_activity__change_keyboard">
    2. If your existing input method provides no means of changing keyboards:
  </string>
  <string name="label__main_activity__change_keyboard_button">Change keyboard</string>
  <string name="text__main_activity__candidate_order">
    3. Candidate order:
  </string>
  <string name="label__main_activity__candidate_order">Candidate order</string>
  <string name="label__main_activity__traditional_first">Traditional first</string>
  <string name="label__main_activity__simplified_first">Simplified first</string>
  <string name="text__main_activity__keyboard_height_adjustment">
    4. Adjust keyboard height (capped at taking up half the screen, not counting the candidates bar):
  </string>
  <string name="hint__main_activity__test_input">5. Test input here</string>
  <string name="text__main_activity__optional_candidates">
    6. (Advanced) Allow the following candidates (which may not have system font support):
  </string>
  <string name="label__main_activity__return">Return</string>
  <!-- Error messages -->
  <string name="message__error__browser">Could not launch a browser and navigate to &lt;%1$s&gt;.</string>
  <string name="message__error__webview">Could not launch WebView.</string>
  <!-- Asset file names for localisation -->
  <string name="file_name__help_html">help.html</string>
  <string name="file_name__about_html">about.html</string>
  <!-- CJK strokes: U+31D0, U+31D1, U+31D2, U+31D4, U+31D6 -->
  <string name="stroke_1" translatable="false">㇐</string> <!-- STROKE H -->
  <string name="stroke_2" translatable="false">㇑</string> <!-- STROKE S -->
  <string name="stroke_3" translatable="false">㇒</string> <!-- STROKE P -->
  <string name="stroke_4" translatable="false">㇔</string> <!-- STROKE D -->
  <string name="stroke_5" translatable="false">㇖</string> <!-- STROKE HG -->
  <!-- Backspace: U+232B ERASE TO THE LEFT -->
  <string name="display_text__backspace" translatable="false">⌫</string>
  <!-- Switch to strokes: U+31D0, U+31D1, U+31D2 -->
  <string name="display_text__switch_to_strokes" translatable="false">
    ㇐㇑㇒
  </string>
  <!-- Comma: U+002C COMMA, U+FF0C FULLWIDTH COMMA -->
  <string name="value_text__qwerty_comma" translatable="false">,</string>
  <string name="value_text__strokes_comma" translatable="false">，</string>
  <!-- Space bar: U+25C0, U+25B6 (triangles) -->
  <string name="display_text__qwerty_space_bar">◀ English ▶</string>
  <string name="display_text__strokes_space_bar">◀ Chinese ▶</string>
  <!-- Full stop: U+002E FULL STOP, U+3002 IDEOGRAPHIC FULL STOP -->
  <string name="value_text__qwerty_full_stop" translatable="false">.</string>
  <string name="value_text__strokes_full_stop" translatable="false">。</string>
  <!-- Enter key "done": U+2713 CHECK MARK -->
  <string name="display_text__done" translatable="false">✓</string>
  <!-- Enter key "go": U+2B95 RIGHTWARDS BLACK ARROW -->
  <string name="display_text__go" translatable="false">⮕</string>
  <!-- Enter key "next": U+2398 NEXT PAGE -->
  <string name="display_text__next" translatable="false">⎘</string>
  <!-- Enter key "previous": U+2397 PREVIOUS PAGE -->
  <string name="display_text__previous" translatable="false">⎗</string>
  <!-- Enter key "search": U+1F50D LEFT-POINTING MAGNIFYING GLASS -->
  <string name="display_text__search" translatable="false">🔍</string>
  <!-- Enter key "send": U+27A4 BLACK RIGHTWARDS ARROWHEAD -->
  <string name="display_text__send" translatable="false">➤</string>
  <!-- Enter key "return": U+23CE RETURN SYMBOL -->
  <string name="display_text__return" translatable="false">⏎</string>
</resources>
