<?xml version="1.0" encoding="utf-8"?>
<Keyboard
  xmlns:app="http://schemas.android.com/apk/res-auto"
  app:keyHeight="@dimen/key_height__strokes"
  app:keyWidth="@dimen/key_width__strokes_stroke"
  app:keyTextSize="@dimen/font_size__strokes"
  app:keyTextOffsetY="@dimen/baseline_correction__strokes"
  app:keyFillColour="@color/key_fill"
>
  <Row
    app:keyHeight="@dimen/key_height__strokes_digit"
    app:keyTextSize="@dimen/font_size__strokes_digit"
    app:keyTextOffsetY="@dimen/baseline_correction__strokes_digit"
  >
    <!-- Ideographic tone marks: U+302A to U+302D -->
    <Key
      app:keyValueText="〪"
      app:keyDisplayText="平〪"
    />
    <Key
      app:keyValueText="〫"
      app:keyDisplayText="上〫"
    />
    <Key
      app:keyValueText="〬"
      app:keyDisplayText="去〬"
    />
    <Key
      app:keyValueText="〭"
      app:keyDisplayText="入〭"
    />
    <!-- U+3000 IDEOGRAPHIC SPACE -->
    <Key app:keyValueText="　" />
  </Row>
  <Row app:keyWidth="@dimen/key_width__digit">
    <!-- Modifier tone letters: U+A700 to U+A707 -->
    <Key app:keyValueText="꜀" /> <!-- 陰平 -->
    <Key app:keyValueText="꜁" /> <!-- 陽平 -->
    <Key app:keyValueText="꜂" /> <!-- 陰上 -->
    <Key app:keyValueText="꜃" /> <!-- 陽上 -->
    <Key app:keyValueText="꜄" /> <!-- 陰去 -->
    <Key app:keyValueText="꜅" /> <!-- 陽去 -->
    <Key app:keyValueText="꜆" /> <!-- 陰入 -->
    <Key app:keyValueText="꜇" /> <!-- 陽入 -->
    <!-- Backspace -->
    <Key
      app:keyValueText="BACKSPACE"
      app:keyDisplayText="@string/display_text__backspace"
      app:keyIsRepeatable="true"
      app:keyWidth="@dimen/key_width__strokes_stroke"
      app:keyTextSize="@dimen/font_size__strokes_backspace"
      app:keyIsPreviewable="false"
    />
  </Row>
  <Row app:keyWidth="@dimen/key_width__digit">
    <!-- Switch to strokes symbols 3 keyboard -->
    <Key
      app:keyValueText="SWITCH_TO_STROKES_SYMBOLS_3"
      app:keyDisplayText="2/3"
      app:keyTextSize="@dimen/font_size__switch_key"
      app:keyTextOffsetY="@dimen/baseline_correction__switch_key"
      app:keyWidth="@dimen/key_width__strokes_stroke"
      app:keyIsPreviewable="false"
    />
    <!-- Tone letters: U+02E5 to U+02E9 -->
    <Key app:keyValueText="˥" />
    <Key app:keyValueText="˦" />
    <Key app:keyValueText="˧" />
    <Key app:keyValueText="˨" />
    <Key app:keyValueText="˩" />
    <!-- U+00B7 MIDDLE DOT -->
    <Key app:keyValueText="·" />
    <!-- U+30FB KATAKANA MIDDLE DOT (because it is fullwidth) -->
    <Key
      app:keyValueText="・"
      app:keyWidth="@dimen/key_width__strokes_stroke"
    />
  </Row>
  <Row
    app:keyHeight="@dimen/key_height__strokes_space_bar"
    app:keyWidth="@dimen/key_width__strokes_stroke"
  >
    <!-- Switch to strokes keyboard -->
    <Key
      app:keyValueText="SWITCH_TO_STROKES"
      app:keyDisplayText="@string/display_text__switch_to_strokes"
      app:keyTextColour="@color/stroke_key_text"
      app:keyTextSize="@dimen/font_size__switch_key"
      app:keyTextOffsetY="@dimen/baseline_correction__switch_key"
      app:keyIsPreviewable="false"
    />
    <!-- Comma -->
    <Key
      app:keyValueText="@string/value_text__strokes_comma"
      app:keyWidth="@dimen/key_width__digit"
    />
    <!-- Space bar -->
    <Key
      app:keyValueText="SPACE"
      app:keyDisplayText="@string/display_text__strokes_space_bar"
      app:keyIsLongPressable="true"
      app:keyIsSwipeable="true"
      app:keyTextSize="@dimen/font_size__space_bar"
      app:keyTextOffsetY="@dimen/baseline_correction__space_bar"
      app:keyTextColour="@color/space_bar_text"
      app:keyWidth="@dimen/key_width__space_bar"
      app:keyIsPreviewable="false"
    />
    <!-- Full stop -->
    <Key
      app:keyValueText="@string/value_text__strokes_full_stop"
      app:keyWidth="@dimen/key_width__digit"
    />
    <!-- Enter key -->
    <Key
      app:keyValueText="ENTER"
      app:keyTextSize="@dimen/font_size__enter_key"
      app:keyTextOffsetY="@dimen/baseline_correction__strokes_enter_key"
      app:keyFillColour="@color/enter_key_fill"
      app:keyIsPreviewable="false"
    />
  </Row>
</Keyboard>
