<?xml version="1.0" encoding="utf-8"?>
<Keyboard
  xmlns:app="http://schemas.android.com/apk/res-auto"
  app:keyHeight="@dimen/key_height__strokes"
  app:keyWidth="@dimen/key_width__digit"
  app:keyTextSize="@dimen/font_size__strokes"
  app:keyTextOffsetY="@dimen/baseline_correction__strokes"
  app:keyFillColour="@color/key_fill"
>
  <Row
    app:keyHeight="@dimen/key_height__strokes_digit"
    app:keyTextSize="@dimen/font_size__strokes_digit"
    app:keyTextOffsetY="@dimen/baseline_correction__strokes_digit"
  >
    <!-- Round brackets: U+FF08, U+FF09 -->
    <Key app:keyValueText="（" />
    <Key app:keyValueText="）" />
    <!-- Lenticular brackets: U+3010, U+3011, U+3016, U+3017 -->
    <Key app:keyValueText="【" />
    <Key app:keyValueText="】" />
    <Key app:keyValueText="〖" />
    <Key app:keyValueText="〗" />
    <!-- Corner brackets: U+300C to U+300F -->
    <Key app:keyValueText="「" />
    <Key app:keyValueText="」" />
    <Key app:keyValueText="『" />
    <Key app:keyValueText="』" />
  </Row>
  <Row>
    <!-- U+FF1A FULLWIDTH COLON -->
    <Key
      app:keyValueText="："
      app:keyWidth="@dimen/key_width__strokes_stroke"
    />
    <!-- U+301C WAVE DASH -->
    <Key
      app:keyValueText="〜"
      app:keyWidth="@dimen/key_width__strokes_stroke"
    />
    <!-- U+3005 IDEOGRAPHIC ITERATION MARK -->
    <Key
      app:keyValueText="々"
      app:keyTextSize="@dimen/font_size__strokes_ditto_key"
      app:keyWidth="@dimen/key_width__strokes_stroke"
    />
    <!-- Angle brackets: U+3008 to U+300B -->
    <Key app:keyValueText="〈" />
    <Key app:keyValueText="〉" />
    <Key app:keyValueText="《" />
    <Key app:keyValueText="》" />
  </Row>
  <Row app:keyWidth="@dimen/key_width__strokes_stroke">
    <!-- Switch to strokes symbols 2 keyboard -->
    <Key
      app:keyValueText="SWITCH_TO_STROKES_SYMBOLS_2"
      app:keyDisplayText="1/2"
      app:keyTextSize="@dimen/font_size__switch_key"
      app:keyTextOffsetY="@dimen/baseline_correction__switch_key"
      app:keyIsPreviewable="false"
    />
    <!-- U+2026 HORIZONTAL ELLIPSIS -->
    <Key app:keyValueText="…" />
    <!-- U+3000 IDEOGRAPHIC SPACE -->
    <Key app:keyValueText="　" />
    <!-- U+30FB KATAKANA MIDDLE DOT (because it is fullwidth) -->
    <Key app:keyValueText="・" />
    <!-- Backspace -->
    <Key
      app:keyValueText="BACKSPACE"
      app:keyDisplayText="@string/display_text__backspace"
      app:keyIsRepeatable="true"
      app:keyTextSize="@dimen/font_size__strokes_backspace"
      app:keyIsPreviewable="false"
    />
  </Row>
  <Row
    app:keyHeight="@dimen/key_height__strokes_space_bar"
    app:keyWidth="@dimen/key_width__strokes_stroke"
  >
    <!-- Switch to strokes keyboard: U+31D0, U+31D1, U+31D2 -->
    <Key
      app:keyValueText="SWITCH_TO_STROKES"
      app:keyDisplayText="㇐㇑㇒"
      app:keyTextColour="@color/stroke_key_text"
      app:keyTextSize="@dimen/font_size__switch_key"
      app:keyTextOffsetY="@dimen/baseline_correction__switch_key"
      app:keyIsPreviewable="false"
    />
    <!-- Comma -->
    <Key
      app:keyValueText="@string/value_text__strokes_comma"
      app:keyWidth="@dimen/key_width__digit"
    />
    <!-- Space bar -->
    <Key
      app:keyValueText="SPACE"
      app:keyDisplayText="@string/display_text__strokes_space_bar"
      app:keyIsLongPressable="true"
      app:keyIsSwipeable="true"
      app:keyTextSize="@dimen/font_size__space_bar"
      app:keyTextOffsetY="@dimen/baseline_correction__space_bar"
      app:keyTextColour="@color/space_bar_text"
      app:keyWidth="@dimen/key_width__space_bar"
      app:keyIsPreviewable="false"
    />
    <!-- U+3002 IDEOGRAPHIC FULL STOP -->
    <Key
      app:keyValueText="。"
      app:keyWidth="@dimen/key_width__digit"
    />
    <!-- Enter key -->
    <Key
      app:keyValueText="ENTER"
      app:keyIsLongPressable="true"
      app:keyTextSize="@dimen/font_size__enter_key"
      app:keyFillColour="@color/enter_key_fill"
      app:keyIsPreviewable="false"
    />
  </Row>
</Keyboard>
